--- a/wwwroot/css/home/text.css
+++ b/wwwroot/css/home/text.css
@@ -153,10 +153,6 @@
   font-size: 15%;
 }
 
-.text-size-17 {
-  font-size: 17%;
-}
-
 .text-size-20 {
   font-size: 20%;
 }
